feat : upldate design

--- a/update_news/templates/upload_file_list.html
+++ b/update_news/templates/upload_file_list.html
@@ -12,7 +12,7 @@
     /* Orange */
 .warning {
   border-color: #ff9800;
-  color: orange;
+  color: rgb(16, 11, 2);
 }
 
 .warning:hover {
@@ -34,6 +34,65 @@
     height: 300px; /* Set the desired height */
     overflow-y: auto; /* Add a scrollbar if content exceeds the height */
 }
+.animate-charcter{
+  
+   text-transform: uppercase;
+    background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+    );
+
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    text-decoration-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 50px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.waviy {
+  position: relative;
+  -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
+  font-size: 20px;
+}
+.waviy span {
+  font-family: 'Alfa Slab One', cursive;
+  position: relative;
+  display: inline-block;
+  color: #170a0a;
+  padding-left: 25px;
+  text-transform: uppercase;
+  animation: waviy 1s infinite;
+  animation-delay: calc(.1s * var(--i));
+  
+}
+@keyframes waviy {
+  0%,40%,100% {
+    transform: translateY(0)
+  }
+  20% {
+    transform: translateY(-20px)
+  }
+}
   </style>
 <body>
   <ul class="nav bg-warning">
@@ -48,15 +107,44 @@
 <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
   <img src="{% static 'image/logo.png' %}" style="width: 200px;" alt="image desc"/>
 </div>
-  <div>
-    <h2 style="font-size: 50px;text-align: center;">Uploaded Files</h2>
+
+<div style="text-align: center;width: 100%;">
+  <h2 class="animate-charcter">Uploaded Files</h2>
+</div>
+    
 
     <div class="container p-b-500">
       <table class="table custom-table p-b-100">
         <thead>
           <tr class="table-warning" style="font-size: 25px;">
-            <th scope="col"><span style="padding-left: 10px;">File Name</span></th>
-            <th scope="col"><span style="padding-left: 10px;">Action</span></th>
+            <th scope="col"><span  style="padding-left: 10px;"><body>
+              <div class="waviy">
+                <span style="--i:1">F</span>
+                <span style="--i:2">I</span>
+                <span style="--i:3">L</span>
+                <span style="--i:4">E</span>
+                <span style="--i:5">N</span>
+                <span style="--i:6">A</span>
+                <span style="--i:7">M</span>
+                <span style="--i:8">E</span>
+                <!-- <span style="--i:9">I</span>
+                <span style="--i:10">N</span> -->
+             
+               </div>
+             </body></span></th>
+            <th scope="col"><span><div class="waviy">
+              <span style="--i:1">A</span>
+              <span style="--i:2">C</span>
+              <span style="--i:3">T</span>
+              <span style="--i:4">I</span>
+              <span style="--i:5">O</span>
+              <span style="--i:6">N</span>
+              <span style="--i:7">S</span>
+              <!-- <span style="--i:8">E</span> -->
+              <!-- <span style="--i:9">I</span>
+              <span style="--i:10">N</span> -->
+           
+             </div></span></th>
           </tr>
         </thead>
         <tbody>
@@ -70,8 +158,7 @@
       </table>
       
     </div>
-       
-  </div>
+
 
   <footer class="bg-warning text-center fixed-bottom" style="height: 20px;">
     <p style="padding-bottom: 3px; font-size: 12px;">© 2024 copy right all right reserved by IFC Travel & Tours</p>
