--- a/update_news/templates/upload_image.html
+++ b/update_news/templates/upload_image.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFC Travel & Tours</title>
 
-
-
-
     <!-- start link -->
 
     <link rel="icon" type="image/png" href="{% static 'images/icons/favicon.ico' %}"/>
@@ -34,10 +31,20 @@
 
     <!-- end link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
     <script src="https://kit.fontawesome.com/47a113df1f.js" crossorigin="anonymous"></script>
-  </head>
+  
 </head>
 <style>
+.warning {
+  border-color: #ff9800;
+  color: rgb(16, 11, 2);
+}
+
+.warning:hover {
+  background: #ff9800;
+  color: white;
+}
     #background-video {
             position: fixed;
             right: 0;
@@ -57,6 +64,35 @@
     .span-color{
         color: rgb(241, 170, 6);
     }
+.animate-charcter
+{
+   text-transform: uppercase;
+    background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+    );
+
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    text-decoration-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 50px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
 </style>
 <body>
     {% block content %}
@@ -81,7 +117,7 @@
     <div class="limiter">
 		<div class="container-login100 " >
 			<div class="wrap-login100 p-t-10 p-b-100">
-				<span class="login100-form-title p-b-30 span-color">
+				<span class="login100-form-title span-color p-b-10 animate-charcter">
 					IFC PDF Generator
 				</span>
 				<form class="login100-form validate-form p-b-10 p-t-30" method="POST" enctype="multipart/form-data">
