feat : update outputfile theme

--- a/update_news/templates/output_file.html
+++ b/update_news/templates/output_file.html
@@ -15,10 +15,20 @@
     td{
         padding: 5px;
     }
+    h2{
+      font-size: 20px;
+      font-weight: 900;
+    }
 </style>
 <body>
 
-  <h2>Generated PDF</h2>
+  <h2>Passenger Information</h2>
+
+  <h1>{{ name }}</h1>
+  <h1>{{ pp_num }}</h1>
+
+
+  <h2>Flight Information</h2>
   <table class="table">
     <thead class="th-head">
       <tr>
