--- a/update_news/templates/output_file2.html
+++ b/update_news/templates/output_file2.html
@@ -32,7 +32,7 @@
 
     {% if len_date > 1 or len_dep > 1 or len_arrival > 1 or len_flight > 1 %}
     
-        {% for in range(len_date) %}
+        {% for i in range(len_date) %}
 
       <tr>
         {% for a in date_list %}
