--- a/update_news/templates/upload_image.html
+++ b/update_news/templates/upload_image.html
@@ -103,6 +103,9 @@
         <li class="nav-item warning">
             <a class="nav-link text-dark" href="{% url 'upload_list' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Upload Pannel</a>
         </li>
+        <li class="nav-item warning">
+          <a class="nav-link text-dark" href="{% url 'generate_pdf' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Data Entry Pannel</a>
+      </li>
     </ul>
 
       <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
