--- a/update_news/templates/entry_pannel.html
+++ b/update_news/templates/entry_pannel.html
@@ -1,4 +1,4 @@
-{% block content %}
+<!-- {% block content %}
   <h2>Fill in the Form</h2>
     
   <button><a href="{% url 'clear' %}">Clean Data</a></button>
@@ -8,4 +8,154 @@
     <button type="submit">Generate PDF</button>
   </form>
   <button><a href="{% url 'sec_gene' %}">add more</a></button>
-{% endblock %}
+{% endblock %} -->
+
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IFC DataEntry Pannel</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <script src="https://kit.fontawesome.com/47a113df1f.js" crossorigin="anonymous"></script>
+  <style>
+    .warning {
+      border-color: #ff9800;
+      color: rgb(16, 11, 2);
+    }
+    
+    .warning:hover {
+      background: #ff9800;
+      color: white;
+    }
+        #background-video {
+                position: fixed;
+                right: 0;
+                bottom: 0;
+                min-width: 100%;
+                min-height: 100%;
+                z-index: -1;
+                opacity: 200;
+            }
+        .nav{
+            background: transparent;
+        }
+        
+        .span-color{
+            color: rgb(241, 170, 6);
+        }
+    
+    </style>
+
+</head>
+<body>
+
+  <ul class="nav bg-warning">
+    <li class="nav-item warning">
+        <a href="{% url 'upload_image' %}" class="nav-link text-dark" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-house"></i>Home</a>
+    </li>
+    <li class="nav-item warning">
+        <a class="nav-link text-dark" href="{% url 'upload_list' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Upload Pannel</a>
+    </li>
+    <li class="nav-item warning">
+      <a class="nav-link text-dark" href="{% url 'generate_pdf' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Data Entry Pannel</a>
+  </li>
+</ul>
+
+  <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
+    <img src="{% static 'image/logo.png' %}" style="width: 200px;" alt="image desc"/>
+  </div>
+
+  <video autoplay muted loop id="background-video">
+    <source src="{% static 'video/travel.mp4' %}" type="video/mp4">
+</video>
+  
+
+        <div class="form-holder">
+            <div class="form-content">
+                <div class="form-items">
+                    <h3>IFC Data Entry</h3>
+                    <p>Fill in the data.</p>
+                    <span style="color:#44b7f1">Remember ! After your added the data , clean your history !</span>
+                    
+                    
+                    <form class="requires-validation" novalidate method="post" action="{% url 'generate_pdf' %}">
+                        {% csrf_token %}
+
+                        <div class="col-md-12"> 
+                          <label for="{{ form.booking_code.id_for_label }}">Booking Code</label>
+                          {{ form.booking_code }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.eticket.id_for_label }}">E Ticket Number</label>
+                          {{ form.eticket }}
+                        </div>
+
+                        
+                        <div class="col-md-12">
+                          <label for="{{ form.passenger_name.id_for_label }}">Passenger Name</label>
+                          {{ form.passenger_name }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.passport_number.id_for_label }}">Passport Number</label>
+                          {{ form.passport_number }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.travel_date.id_for_label }}">Travel Date</label>
+                          {{ form.travel_date }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.desination.id_for_label }}">Destination</label>
+                          {{ form.desination }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.departure_time.id_for_label }}">Departure Time</label>
+                          {{ form.departure_time }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.arrival_time.id_for_label }}">Arrival Time</label>
+                          {{ form.arrival_time }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.flight.id_for_label }}">Flight Name/Number</label>
+                          {{ form.flight }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.ar_class.id_for_label }}">Class</label>
+                          {{ form.ar_class }}
+                        </div>
+                        <div class="col-md-12">
+                          <label for="{{ form.baggage_allowance.id_for_label }}">Baggage Allowance</label>
+                          {{ form.baggage_allowance }}
+                        </div>
+                        <div class="form-button mt-3">
+                            <input id="submit" value="Save" type="submit" class="btn btn-primary">
+                            
+                        </div>
+                    </form>
+                    <a href="{% url 'clear' %}"><button class="btn btn-primary">Clean Data</button></a>
+                            <a href="{% url 'sec_gene' %}"><button class="btn btn-primary">Add more</button></a>
+                </div>
+            </div>
+            
+        </div>
+
+<div class="bg-warning" style="width: 100%; height: 40px; text-align: center;">
+  <p style="padding-top: 6px;">© 2024 copy right all right reserved by IFC Travel & Tours</p>
+</div>
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+
+
