--- a/update_news/templates/output_file.html
+++ b/update_news/templates/output_file.html
@@ -8,60 +8,60 @@
     <script src="https://kit.fontawesome.com/47a113df1f.js" crossorigin="anonymous"></script>
 </head>
 <style>
-    .table,.th-head{
+    .table, .th-head {
         border: 2px solid black;
         padding: 5px;
     }
-    td{
+    td {
         padding: 5px;
     }
-    h2{
-      font-size: 20px;
-      font-weight: 900;
+    h2 {
+        font-size: 20px;
+        font-weight: 900;
     }
 </style>
 <body>
 
-  <h2>Passenger Information</h2>
-
-  <h1>{{ name }}</h1>
-  <h1>{{ pp_num }}</h1>
 
 
-  <h2>Flight Information</h2>
-  <table class="table">
-    <thead class="th-head">
-      <tr>
-        <th>Date</th>
-        <th>Destination</th>
-        <th>Depature Time</th>
-        <th>Arrival Time</th>
-        <th>Flight Name?Number</th>
-        <th>Class</th>
-        <th>Baggage Allowance</th>
-      </tr>
-    </thead>
+  <section>
+    <h1><span>Booking Code :</span>{{  }}</h1>
+  </section>
 
-<!-- ----------------------------------------------------------------------------------------------------------- -->
-    
-    <tbody>
-      <tr>
+    <h2>Passenger Information</h2>
+  
+    <h1>{{ name|default:" " }}</h1>
+    <h1>{{ pass_num|default:" " }}</h1>
 
-        <td>{{ travel_date }}</td>
-        <td>{{ desination }}</td>
-        <td>{{ departure_time }}</td>
-        <td>{{ arrival_time }}</td>
-        <td>{{ flight }}</td>
-        <td>{{ ar_class }}</td>
-        <td>{{ baggage_allowance }}</td>
+    <h2>Flight Information</h2>
+    <table class="table">
+        <thead class="th-head">
+            <tr>
+                <th>Date</th>
+                <th>Destination</th>
+                <th>Depature Time</th>
+                <th>Arrival Time</th>
+                <th>Flight Name/Number</th>
+                <th>Class</th>
+                <th>Baggage Allowance</th>
+            </tr>
+        </thead>
 
-      </tr>
-    </tbody>
+        <tbody>
+            {% for flight_data_entry in flight_data_lists %}
+                <tr>
+                    <td>{{ flight_data_entry.travel_date|default:" " }}</td>
+                    <td>{{ flight_data_entry.desination|default:" " }}</td>
+                    <td>{{ flight_data_entry.departure_time|default:" " }}</td>
+                    <td>{{ flight_data_entry.arrival_time|default:" " }}</td>
+                    <td>{{ flight_data_entry.flight|default:" " }}</td>
+                    <td>{{ flight_data_entry.ar_class|default:" " }}</td>
+                    <td>{{ flight_data_entry.baggage_allowance|default:" " }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-      
-  </table>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
-
