--- a/update_news/templates/entry_pannel2.html
+++ b/update_news/templates/entry_pannel2.html
@@ -1,4 +1,221 @@
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Entry Pannel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
+    <script src="https://kit.fontawesome.com/47a113df1f.js" crossorigin="anonymous"></script>
+     <style>
+
+    body {
+      font-family: "Inter", Arial, Helvetica, sans-serif;
+    }
+    .formbold-mb-5 {
+      margin-bottom: 20px;
+    }
+    .formbold-pt-3 {
+      padding-top: 12px;
+    }
+    .formbold-main-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 48px;
+    }
+  
+    .formbold-form-wrapper {
+      margin: 0 auto;
+      max-width: 550px;
+      width: 100%;
+      background: white;
+    }
+    .formbold-form-label {
+      display: block;
+      font-weight: 500;
+      font-size: 16px;
+      color: #07074d;
+      margin-bottom: 12px;
+    }
+    .formbold-form-label-2 {
+      font-weight: 600;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+  
+    .formbold-form-input {
+      width: 100%;
+      padding: 12px 24px;
+      border-radius: 6px;
+      border: 1px solid #e0e0e0;
+      background: white;
+      font-weight: 500;
+      font-size: 16px;
+      color: #6b7280;
+      outline: none;
+      resize: none;
+    }
+    .formbold-form-input:focus {
+      border-color: #6a64f1;
+      box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+    }
+  
+    .formbold-btn {
+      text-align: center;
+      font-size: 16px;
+      border-radius: 6px;
+      padding: 14px 32px;
+      border: none;
+      font-weight: 600;
+      background-color: #6a64f1;
+      color: white;
+      width: 100%;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .formbold-btn:hover {
+      box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
+    }
+  
+    .formbold--mx-3 {
+      margin-left: -12px;
+      margin-right: -12px;
+    }
+    .formbold-px-3 {
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+    .flex {
+      display: flex;
+    }
+    .flex-wrap {
+      flex-wrap: wrap;
+    }
+    .w-full {
+      width: 100%;
+    }
+    .warning {
+  border-color: #ff9800;
+  color: rgb(16, 11, 2);
+}
+
+.warning:hover {
+  background: #ff9800;
+  color: white;
+}
+    #background-video {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            z-index: -1;
+        }
+    .nav{
+        background: transparent;
+    }
+    .custom-image-input input[type="file"] {
+    padding: 50px;
+    align-items: center;
+    width: 390px;
+    }
+    .span-color{
+        color: rgb(241, 170, 6);
+    }
+    @media (min-width: 540px) {
+      .sm\:w-half {
+        width: 50%;
+      }
+    }
+  </style>
+
+</head>
+<body>
+    <ul class="nav bg-warning">
+        <li class="nav-item warning">
+            <a href="{% url 'upload_image' %}" class="nav-link text-dark" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-house"></i>Home</a>
+        </li>
+        <li class="nav-item warning">
+            <a class="nav-link text-dark" href="{% url 'upload_list' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Upload Pannel</a>
+        </li>
+        <li class="nav-item warning">
+          <a class="nav-link text-dark" href="{% url 'generate_pdf' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Data Entry Pannel</a>
+      </li>
+    </ul>
+    <div class="formbold-main-wrapper">
+        
+        <div class="formbold-form-wrapper">
+            <a href="{% url 'clear' %}" class="formbold-btn">Clean Data</a><br><br>
+            <h2>Add more Data !</h2><br>
+          <form action="{% url 'generate_pdf' %}" method="post">
+            {% csrf_token %}
+            <div class="formbold-mb-5">
+                <label for="travel_date" class="formbold-form-label">Travel Date</label>
+                <input type="text" name="travel_date" class="formbold-form-input" id="travel_date">
+            </div>
+
+            <div class="formbold-mb-5">
+                <label for="desination" class="formbold-form-label">Destination</label>
+                <input type="text" name="desination" class="formbold-form-input" id="desination">
+            </div>
+
+            <div class="flex flex-wrap formbold--mx-3">
+              <div class="w-full sm:w-half formbold-px-3">
+                <div class="formbold-mb-5 w-full">
+                 <label for="departure_time" class="formbold-form-label">Departure Time</label>
+                <input type="text" name="departure_time" class="formbold-form-input" id="departure_time">
+                </div>
+              </div>
+              <div class="w-full sm:w-half formbold-px-3">
+                <div class="formbold-mb-5">
+                  <label for="arrival_time" class="formbold-form-label">Arrival Time</label>
+                <input type="text" name="arrival_time" class="formbold-form-input" id="arrival_time">
+                </div>
+              </div>
+            </div>
+      
+            <div class="formbold-mb-5 formbold-pt-3">
+              <div class="flex flex-wrap formbold--mx-3">
+                <div class="w-full sm:w-half formbold-px-3">
+                  <div class="formbold-mb-5">
+                     <label for="ar_class" class="formbold-form-label">Class</label>
+                <input type="text" name="ar_class" class="formbold-form-input" id="ar_class" >
+                  </div>
+                </div>
+                <div class="w-full sm:w-half formbold-px-3">
+                  <div class="formbold-mb-5">
+                    <label for="flight" class="formbold-form-label">Flight</label>
+                <input type="text" name="flight" class="formbold-form-input" id="flight">
+                  </div>
+                </div>
+                <div class="w-full sm:w-half formbold-px-3">
+                  <div class="formbold-mb-5">
+                    <label for="baggage_allowance" class="formbold-form-label">Baggage Allowance</label>
+                <input type="text" class="formbold-form-input" name="baggage_allowance" id="baggage_allowance">
+                  </div>
+                </div>
+                <!-- <div class="formbold-btn"> -->
+                    <input type="submit" value="Add" class="formbold-btn">
+                    
+                <!-- </div> -->
+                
+          </form>
+          
+        </div>
+        
+      </div>
+
+    </div>
+</div> 
+      
+      <div class="bg-warning" style="width: 100%; height: 40px; text-align: center;">
+        <p style="padding-top: 6px;">© 2024 copy right all right reserved by IFC Travel & Tours</p>
+      </div>      
+</body>
+</html>
+
+<!-- {% block content %}
     <h2>Fill in the Form</h2>
 
     <button><a href="{% url 'clear' %}">Clean Data</a></button>
@@ -37,4 +254,8 @@
 
             <input type="submit" value="Add">
     </form>
-{% endblock %}
+{% endblock %} -->
+
+
+
+ 
