--- a/update_news/templates/upload_file_list.html
+++ b/update_news/templates/upload_file_list.html
@@ -103,6 +103,9 @@
 
         <a class="nav-link text-dark" href="{% url 'upload_list' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Upload Pannel</a>
     </li>
+    <li class="nav-item warning">
+      <a class="nav-link text-dark" href="{% url 'generate_pdf' %}" style="padding: 20px; font-size: 20px;" staria-current="page"><i class="fa-solid fa-spinner"></i>Data Entry Pannel</a>
+  </li>
 </ul>
 <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
   <img src="{% static 'image/logo.png' %}" style="width: 200px;" alt="image desc"/>
@@ -111,7 +114,6 @@
 <div style="text-align: center;width: 100%;">
   <h2 class="animate-charcter">Uploaded Files</h2>
 </div>
-    
 
     <div class="container p-b-500">
       <table class="table custom-table p-b-100">
