--- a/update_news/templates/upload_image.html
+++ b/update_news/templates/upload_image.html
@@ -109,7 +109,7 @@
     </ul>
 
       <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
-        <img src="{% static 'image/logo.png' %}" style="width: 200px;" alt="image desc"/>
+        <img src="{% static 'image/logo.png' %}" alt="image desc"/>
       </div>
 
       <video autoplay muted loop id="background-video">
