--- a/update_news/templates/entry_pannel.html
+++ b/update_news/templates/entry_pannel.html
@@ -141,6 +141,7 @@
                     <a href="{% url 'clear' %}"><button class="btn btn-primary">Clean Data</button></a>
                     <a href="{% url 'sec_gene' %}"><button class="btn btn-primary">Add more</button></a>
                     <a href="{% url 'pdf_view' %}"><button class="btn btn-primary">Download</button></a>
+                    <a href="{% url 'pdf_view2' %}"><button class="btn btn-primary">Agent Download</button></a>
                 </div>
             </div>
             
