--- a/update_news/templates/output_file2.html
+++ b/update_news/templates/output_file2.html
@@ -21,26 +21,12 @@
         font-size: 20px;
         font-weight: 900;
     }
-    @page{
-        margin: 0;
-        padding: 0;
-    }
-    body{
-        margin: 0;
-        padding: 0;
-    }
-    .content{
-        padding-left: 30px;
-        padding-right: 30px;
-        margin-bottom: 5px;
-    }
+
+
     
 </style>
 <body>
 
-    <img src="{{ image_file }}" alt="banner">
-<br><br><br>
-    <div class="content">
         <section>
             <h1>Booking Code : {{ booking_code|default:" " }}</h1>
             <h1>E Ticket No : {{ eticket|default:" " }}</h1>
@@ -53,7 +39,7 @@
         
             <h2>Flight Information</h2>
  
-                <table class="table tb-update">
+                <table class="table">
                     <thead class="th-head">
                         <tr>
                             <th><h1>Date</h1></th>
@@ -80,7 +66,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
-
+<br><br><br><br><br>
             
         
             <h2>Price</h2>
@@ -93,10 +79,6 @@
         
     </div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div class="photo">
-        <img src="{{ image_file2 }}" alt="banner" >
-    </div>
     
 
 
