feat : fix design

--- a/update_news/templates/upload_image.html
+++ b/update_news/templates/upload_image.html
@@ -108,9 +108,9 @@
       </li>
     </ul>
 
-      <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
-        <img src="{% static 'image/logo.png' %}" alt="image desc"/>
-      </div>
+    <div style="position: absolute; left: 80%; top: -40px;z-index: 999;">
+      <img src="{% static 'image/logo.png' %}" style="width: 200px;" alt="image desc"/>
+    </div>
  
       <video autoplay muted loop id="background-video">
         <source src="{% static 'video/travel.mp4' %}" type="video/mp4">
