feat : update footer

--- a/update_news/templates/entry_pannel.html
+++ b/update_news/templates/entry_pannel.html
@@ -147,8 +147,8 @@
             
         </div>
 
-<div class="bg-warning" style="width: 100%; height: 40px; text-align: center;">
-  <p style="padding-top: 6px;">© 2024 copy right all right reserved by IFC Travel & Tours</p>
+<div class="bg-warning" style="width: 100%; height: 60px; text-align: center; ">
+  <p style="padding-top: 6px;">© 2024 copy right all right reserved by IFC Travel & Tours <br><a style="font-size: 16px;text-decoration: none;" href="https://thirishwehlaing.my.canva.site/thirishwehlaing">Developer © Thiri Shwe Hlaing</a></p>
 </div>
 
 
