--- a/update_news/templates/upload_file_list.html
+++ b/update_news/templates/upload_file_list.html
@@ -162,8 +162,8 @@
     </div>
 
 
-  <footer class="bg-warning text-center fixed-bottom" style="height: 20px;">
-    <p style="padding-bottom: 3px; font-size: 12px;">© 2024 copy right all right reserved by IFC Travel & Tours</p>
+  <footer class="bg-warning text-center fixed-bottom" style="height: 40px;">
+    <p style="padding-bottom: 3px; font-size: 12px;">© 2024 copy right all right reserved by IFC Travel & Tours<br><a style="font-size: 12px;text-decoration: none;" href="https://thirishwehlaing.my.canva.site/thirishwehlaing">Developer © Thiri Shwe Hlaing</a></p>
   </footer>
     
   
