--- a/update_news/templates/upload_image.html
+++ b/update_news/templates/upload_image.html
@@ -139,8 +139,8 @@
 		</div>
 	</div>
   
-    <footer class="bg-warning text-center fixed-bottom" style="height: 40px;">
-        <p style="padding-top: 6px;">© 2024 copy right all right reserved by IFC Travel & Tours</p>
+    <footer class="bg-warning text-center fixed-bottom" style="height: 60px;">
+        <p style="padding-top: 6px;">© 2024 copy right all right reserved by IFC Travel & Tours<br><a style="font-size: 12px;text-decoration: none;" href="https://thirishwehlaing.my.canva.site/thirishwehlaing">Developer © Thiri Shwe Hlaing</a></p>
       </footer>
 {% endblock %}
 
